Refactored _get_iq_url(). Added nxrmInstall() and iqInstall()